--- a/src/Merchello.FastTrack.Ui/App_Plugins/Merchello/lang/da-DK.xml
+++ b/src/Merchello.FastTrack.Ui/App_Plugins/Merchello/lang/da-DK.xml
@@ -555,6 +555,7 @@
     <key alias="editWarehouse">Redigér lager</key>
     <key alias="shippingMethods">Forsendelsesmuligheder</key>
     <key alias="shippingMethodsHelper">Tilføj forsendelsesmuligheder til eksisterende regioner eller opret en ny region</key>
+    <key alias="addZone" >Add a Zone</key>
     <key alias="addCountry">Tilføj et land</key>
     <key alias="addCatalog">Tilføj et katalog</key>
     <key alias="selectCatalog">Vælg katalog</key>
@@ -606,7 +607,11 @@
     <key alias="typeCountryName">Skriv landenavn</key>
     <key alias="noneSelected">-- ingen valgt --</key>
   </area>
-  <area alias="merchelloShippingWarehouse">
+	<area alias="merchelloShippingZone">
+		<key alias="addZone">Add a Zone</key>
+		<key alias="typeZoneName" >Type your Zone Name</key>
+	</area>
+	<area alias="merchelloShippingWarehouse">
     <key alias="deleteComfirm">Er du sikker på at du vil fjerne lageret?</key>
     <key alias="address">Adresse</key>
     <key alias="primaryWarehouse">Primært lager</key>
