--- a/src/Merchello.Web.UI.Client/src/config/lang/da-DK.xml
+++ b/src/Merchello.Web.UI.Client/src/config/lang/da-DK.xml
@@ -555,7 +555,8 @@
     <key alias="editWarehouse">Redigér lager</key>
     <key alias="shippingMethods">Forsendelsesmuligheder</key>
     <key alias="shippingMethodsHelper">Tilføj forsendelsesmuligheder til eksisterende regioner eller opret en ny region</key>
-    <key alias="addCountry">Tilføj et land</key>
+	<key alias="addZone" >Add a Zone</key>
+	<key alias="addCountry">Tilføj et land</key>
     <key alias="addCatalog">Add a Catalog</key>
     <key alias="selectCatalog">Select Catalog</key>
     <key alias="shippingProvidersMethodsTitle">Shipping Providers &amp; Methods</key>
@@ -605,7 +606,11 @@
     <key alias="typeCountryName">Skriv landenavn</key>
     <key alias="noneSelected">-- ingen valgt --</key>
   </area>
-  <area alias="merchelloShippingWarehouse">
+	<area alias="merchelloShippingZone">
+		<key alias="addZone">Add a Zone</key>
+		<key alias="typeZoneName" >Type your Zone Name</key>
+	</area>
+	<area alias="merchelloShippingWarehouse">
     <key alias="deleteComfirm">Er du sikker på at du vil fjerne lageret?</key>
     <key alias="address">Adresse</key>
     <key alias="primaryWarehouse">Primært lager</key>
